test multi-line tags

--- a/test/tree/page.html
+++ b/test/tree/page.html
@@ -10,6 +10,10 @@
 
     <img src="1x2.png" alt="self-closing tag" />
     <!-- prettier-ignore -->
-    <img src="1x2.png" alt="html5 loose non-closed tag">
+    <img src="1x2.png" alt="html5 loose non-closed tag" height="2" width="1">
+    <!-- prettier-ignore -->
+    <img src="1x2.png"
+         alt="multi-line"
+    />
   </body>
 </html>
